pr-agent/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    alb.networking.azure.io/alb-id: /subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/kaito-pr-agent-sample-1/providers/Microsoft.ServiceNetworking/trafficControllers/kaito-sample-pr-agent
  name: pr-agent-gateway
spec:
  addresses:
  - type: alb.networking.azure.io/alb-frontend
    value: kaito-sample-pr-agent-frontend
  gatewayClassName: azure-alb-external
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http-listener
    port: 80
    protocol: HTTP
